Fix alignment in account template

--- a/pyred/static/app/css/app.css
+++ b/pyred/static/app/css/app.css
@@ -1,3 +1,14 @@
 body {
     padding-top: 60px;
 }
+
+.dl-horizontal dt:after {
+    content: ":";
+}
+
+/* Prevent empty descriptions to float up */
+.dl-horizontal dd:after {
+    content: ".";
+    visibility: hidden;
+    clear: left;
+}
